--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "quagga": "^0.12.1",
     "react": "^18",
     "react-dom": "^18"
   },
