--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0 -p 3000",
+    "dev": "next dev -H 192.168.10.30 -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,9 +12,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
+    "@prisma/client": "^5.15.0",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "prisma": "^5.15.0",
     "quagga": "^0.12.1",
     "react": "^18",
     "react-dom": "^18"
