--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -79,7 +79,7 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            type=semver,prefix=api-,pattern={{version}}
+            type=semver,prefix=app-,pattern={{version}}
           flavor: |
             latest=false
       # Build and push Docker image with Buildx (don't push on PR)
