install form-data เเละ node-fetch

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.15.19",
     "@prisma/client": "^5.15.0",
+    "form-data": "^4.0.0",
     "jwt-decode": "^4.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "node-fetch": "^3.3.2",
     "prisma": "^5.15.0",
     "quagga": "^0.12.1",
     "react": "^18",
