--- a/.github/workflows/docker-image_dev.yml
+++ b/.github/workflows/docker-image_dev.yml
@@ -32,7 +32,7 @@ jobs:
           
   build:
 
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     permissions:
       contents: read
       packages: write
